# libcint_rust

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
python/: validate_pyscf.py
src/: lib.rs  optimizer.rs  types.rs
src/int1e/: kinetic.rs  mod.rs  nuclear.rs  overlap.rs
src/int2e/: driver.rs  eri.rs  mod.rs
src/recur/: g0_2d4d.rs  g0_2e.rs  mod.rs
src/rys/: mod.rs
src/transform/: cart2sph.rs  mod.rs
